@@ -74,6 +74,8 @@ Version 1.4.5 - CVS
     folders. Thanks Simon Matter for the patch. (#1155791)
   - Fix incorrect folder hierarchy display (#1009654), thanks
     Awais Ahmad for the patch (#1082558).
+  - Added title box for From: column to display the address.
+
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
